# kura-k-ho

./: README.md
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 55100fa47940_chat_message_and_session_table.py  d337359a9a5b_chat_session_and_message.py
backend/src/: auth.py  chat.py  config.py  dependencies.py  routes.py  supabase.py
backend/src/db/: pg_session.py
backend/src/db/models/: __init__.py  chat_message.py  chat_sesion.py
backend/src/llm/: answer.py  intent.py  summarizer.py
backend/src/scraper/: annapurna_scraper.py  google_search.py  himalayantime_scraper.py  kathmandupost_scraper.py  nepalitimes_scraper.py  online_khabar_scrape.py  types.py
frontend/: .env  .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx
frontend/src/components/layout/: Layout.tsx  Navbar.tsx  ProtectedRoute.tsx
frontend/src/components/news/: NewsCard.tsx
frontend/src/hooks/: useAuth.ts  useRealtimeMessages.ts  useSession.ts
frontend/src/lib/: api.ts  queryClient.ts  supabase.ts
frontend/src/pages/: Chat.tsx  Home.tsx  Login.tsx  NewsFeed.tsx  Preferences.tsx  Signup.tsx
frontend/src/services/: api.ts  authService.ts  chatService.ts  newsService.ts  sessionService.ts
frontend/src/store/: authAtoms.ts  chatAtoms.ts  newsAtoms.ts  useAuthStore.ts  useChatStore.ts  useNewsStore.ts
frontend/src/types/: index.ts
