[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.3",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "supabase>=2.22.4",
    "uvicorn>=0.38.0",
]

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

