[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.3",
    "openai>=2.6.1",
    "pydantic[email]>=2.12.3",
    "pydantic-settings>=2.11.0",
    "supabase>=2.22.4",
    "uvicorn>=0.38.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "requests>=2.32.5",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.2",
]

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

